--- a/src/assets/scss/components/_filter.scss
+++ b/src/assets/scss/components/_filter.scss
@@ -201,7 +201,7 @@
     background: white;
     border: 1px solid #8a8a8a;
     color: #8a8a8a;
-    right: 10px; 
+    right: 10px;
     position: absolute;
     height: 30px;
     font-size: 10px;
@@ -225,7 +225,7 @@
   .left {
     width: 70%;
   }
-  .right { 
+  .right {
     width: 30%;
     padding-top: 5px;
   }
@@ -291,7 +291,7 @@
   }
 
   .product-price-orig {
-    font-size: rem-calc(12px);
+    font-size: rem-calc(14px);
     color: #747474;
     font-weight: normal;
   }
@@ -396,7 +396,7 @@
 //   }
 // }
 
-//Area for the actual search input for nav 
+//Area for the actual search input for nav
 .search-tool {
   display: none;
   background-color: #000000;
